--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: postgres
-  password: password
-
+  #username: postgres
+  #password: password
+  username: monicasira
+  password:
   host: localhost
 
 development:
