Added script directions for TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+script:
+  - bundle install
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
+
 deploy:
   provider: heroku
   api_key:
