--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-script:
+branches:
+  only:
+  - master
+
+before_script:
   - bundle install
   - bundle exec rake db:create
   - bundle exec rake db:migrate
