--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@
 /yarn-error.log
 
 .byebug_history
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
